# BtatesCraft

./: BtatesCraft.sln  CMakeLists.txt  README.md
BtatesCraft/: BtatesCraft.vcxproj
BtatesCraft/res/Shaders/: Basic.shader  Block.shader
BtatesCraft/src/: Block.cpp  Block.h  BlockDataBase.cpp  BlockDataBase.h  BlockPicker.cpp  BlockPicker.h  BlockRenderManger.cpp  BlockRenderManger.h  BlockType.h  Camera.cpp  Camera.h  Chunck.cpp  Chunck.h  GLErrorHandler.cpp  GLErrorHandler.h  Game.cpp  Game.h  IndexBuffer.cpp  InputHandler.h  Main.cpp  Random.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBufferLayout.cpp  VertexBufferLayout.h
BtatesCraft/src/scenes/: GameScene.cpp  GameScene.h  Scene.h
